# auto-graph-of-thoughts

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml
.claude/skills/graph-of-thoughts/: SKILL.md
.trunk/: trunk.yaml
examples/custom_tasks/: creative_selection.json  rag_antihallucination.json
examples/doc_merge/: doc_merge.py
examples/keyword_counting/: keyword_counting.py  plot.py
examples/set_intersection/: set_intersection_032.py
examples/sorting/: sorting_032.py
graph_of_thoughts/: __init__.py  diagnostics.py  mcp_server.py
graph_of_thoughts/controller/: README.md  __init__.py  async_controller.py  controller.py
graph_of_thoughts/language_models/: __init__.py  abstract_language_model.py  chatgpt.py  config_template.json  llamachat_hf.py  openrouter.py
graph_of_thoughts/operations/: __init__.py  creativity.py  creativity_deep.py  operations.py
tests/: test_async_progress.py  test_creativity.py  test_creativity_deep.py  test_diagnostics.py
