[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph_of_thoughts"
version = "0.0.3"
authors = [
  { name = "Maciej Besta", email = "maciej.besta@inf.ethz.ch" },
  { name = "Nils Blach", email = "nils.blach@inf.ethz.ch" },
  { name = "Ales Kubicek", email = "akubicek@student.ethz.ch" },
  { name = "Robert Gerstenberger", email = "gerstenberger.robert@gmail.com" },
]
description = "Python package for Graph of Thoughts that enables solving elaborate problems with Large Language Models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "backoff>=2.2.1",
  "openai>=1.50.0",
  "matplotlib>=3.7.1",
  "numpy>=1.26.0",
  "pandas>=2.0.3",
  "sympy>=1.12",
  "scipy>=1.10.1",
  "mcp>=0.1.0",
]

[project.optional-dependencies]
hf = [
  "torch>=2.0.1",
  "transformers>=4.31.0",
  "accelerate>=0.21.0",
  "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/spcl/graph-of-thoughts"

[project.scripts]
